<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="menu_about">About…</string>
    <string name="menu_clipboard_copied">Copied to clipboard.</string>
    <string name="show_hide_units">Show/hide units…</string>
    <string name="copy_value">Copy value</string>
    <string name="copy_row">Copy row</string>

    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="str_7">7</string>
    <string name="str_8">8</string>
    <string name="str_9">9</string>
    <string name="str_0">0</string>
    <string name="str_pad_point">.</string>
    <string name="str_pad_clear">C</string>
    <string name="str_pad_negate">±</string>
    <string name="str_pad_back">←</string>

    <string name="launcher_title">Convert Units</string>
    <string name="widget_title">Convert Units</string>
    <string name="about_message">ConvertMe — An easy-to-use app for converting measuring units.\n\nCreated by Aman, Mayank, Baibhav and Yusuf.</string>

    <string name="configure_widget">Configure widget</string>
    <string name="unit_category">Unit category:</string>
    <string name="unit_from">Unit to convert from:</string>
    <string name="unit_to">Unit to convert to:</string>
    <string name="unit_increment">Increment amount:</string>

    <string name="custom_units">Custom units</string>
    <string name="add_new_unit">Add new unit…</string>
    <string name="add_button">Add</string>
    <string name="done_button">Done</string>
    <string name="delete_unit">Delete unit</string>
    <string name="edit_unit">Edit unit</string>
    <string name="preview">Preview</string>
    <string name="inverse">Inverse</string>
    <string name="nice_try">Nice try!</string>
    <string name="delete_unit_confirm">Are you sure you want to delete \"%s\"?</string>
    <string name="delete_unit_dependent">\"%1$s\" cannot be deleted because other units depend on it (%2$s).</string>
    <string name="custom_unit_name">Name of unit</string>
    <string name="custom_unit_name_invalid">Invalid name (must be non-empty)</string>
    <string name="custom_unit_base">Base unit:</string>
    <string name="custom_unit_multiplier">Multiplier</string>
    <string name="custom_unit_multiplier_invalid">Invalid multiplier (must be a nonzero decimal number)</string>
    <string name="custom_unit_multiplier_default">1.0</string>

</resources>
